[package]
name = "tm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "3.3.0"
concurrent-queue = "2.4.0"
event-listener = "5.2.0"
futures = "0.3.30"
slab = "0.4.9"
tokio = { version = "1.37.0", features = ["rt"] }
tracing = "0.1.40"
